[gd_scene load_steps=21 format=2]

[ext_resource path="res://FluidSim2D/WaterGenPhysicsServer.gd" type="Script" id=1]
[ext_resource path="res://FPS.gd" type="Script" id=2]
[ext_resource path="res://Glass.png" type="Texture" id=3]
[ext_resource path="res://FluidSim2D/water_particle.png" type="Texture" id=4]
[ext_resource path="res://ButtonPressSwitch.gd" type="Script" id=5]
[ext_resource path="res://DetectMouseEnter.gd" type="Script" id=6]
[ext_resource path="res://Water_View_Shader.gdshader" type="Shader" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://FluidSim2D/WaterSim.gd" type="Script" id=9]
[ext_resource path="res://FluidSim2D/GlassScript.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 89.5, 15 )

[sub_resource type="OpenSimplexNoise" id=14]
octaves = 9
period = 58.5
persistence = 0.919
lacunarity = 3.46

[sub_resource type="NoiseTexture" id=6]
seamless = true
noise = SubResource( 14 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 7 )
shader_param/water_speed = 0.01
shader_param/color_detect_threshold = 0.35
shader_param/water_dev_color = Color( 1, 0, 1, 1 )
shader_param/water_color = Color( 0, 0, 1, 1 )
shader_param/bubble_color = Color( 0.517647, 0.890196, 0.964706, 1 )
shader_param/noise = SubResource( 6 )

[sub_resource type="OpenSimplexNoise" id=16]
octaves = 9
period = 58.5
persistence = 0.919
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=4]
seamless = true
noise = SubResource( 16 )

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 7 )
shader_param/water_speed = 0.01
shader_param/color_detect_threshold = 0.35
shader_param/water_dev_color = Color( 1, 0, 1, 1 )
shader_param/water_color = Color( 0.313726, 0.87451, 0.247059, 1 )
shader_param/bubble_color = Color( 0, 0, 0, 1 )
shader_param/noise = SubResource( 4 )

[sub_resource type="OpenSimplexNoise" id=18]
octaves = 9
period = 25.5
persistence = 0.919
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=12]
seamless = true
noise = SubResource( 18 )

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 7 )
shader_param/water_speed = 0.0
shader_param/color_detect_threshold = 0.35
shader_param/water_dev_color = Color( 1, 0, 1, 1 )
shader_param/water_color = Color( 1, 0.811765, 0.0823529, 1 )
shader_param/bubble_color = Color( 1, 1, 1, 1 )
shader_param/noise = SubResource( 12 )

[node name="Control" type="Node2D"]
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 215.0
margin_bottom = 131.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.501961 )

[node name="HomeButton" type="ColorRect" parent="CanvasLayer"]
margin_left = 25.0
margin_top = 90.0
margin_right = 204.0
margin_bottom = 120.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.188235 )
script = ExtResource( 5 )
path = "res://Menu.tscn"

[node name="Area2D" type="Area2D" parent="CanvasLayer/HomeButton"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/HomeButton/Area2D"]
position = Vector2( 89.5, 15 )
shape = SubResource( 13 )

[node name="FPS" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 30.0
margin_right = 126.0
margin_bottom = 59.0
text = "FPS: 0
PHYSICS FPS: 0"
script = ExtResource( 2 )
adjust_physics_update = true

[node name="Space" type="Label" parent="CanvasLayer"]
margin_left = 166.0
margin_top = 571.0
margin_right = 474.0
margin_bottom = 602.0
text = "Presiona la tecla ESPACIO para generar el fluido.
Usa las flechas para rotar el contedor."
align = 1
valign = 1

[node name="Back" type="Label" parent="CanvasLayer"]
margin_left = 26.0
margin_top = 98.0
margin_right = 203.0
margin_bottom = 112.0
text = "Regresar"
align = 1
valign = 1

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 640, 616 )
mode = 1
mass = 1.00102
gravity_scale = 0.0
script = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2( 0, -24 )
scale = Vector2( 12, 12 )
polygon = PoolVector2Array( 24, -16, 24, 28, 18.688, 32, -18.9097, 32, -24, 28, -24, -16, -32, -24, -21.1121, -24, -16, -19.6667, -16, 20, -10.4148, 24, 10.6667, 24, 16, 20, 16, -19.6667, 21.6769, -24, 32, -24 )

[node name="Polygon2D" type="Polygon2D" parent="RigidBody2D"]
position = Vector2( 0, -24 )
scale = Vector2( 12, 12 )
texture = ExtResource( 3 )
texture_offset = Vector2( 50, 100 )
texture_scale = Vector2( 3, 3 )
polygon = PoolVector2Array( 24, -16, 24, 28, 18.688, 32, -18.6667, 32, -24, 28, -24, -16, -32, -24, -21.1121, -24, -16, -19.6667, -16, 20, -10.5722, 24, 10.9796, 24, 16, 20, 16, -19.6667, 21.6769, -24, 32, -24 )

[node name="WaterGen" type="Position2D" parent="."]
position = Vector2( 672, 448 )
script = ExtResource( 1 )
__meta__ = {
"_gizmo_extents_": 60.0
}
particle_texture = ExtResource( 4 )
max_water_particles = 1500
spawn_time = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 640 )
current = true
zoom = Vector2( 2, 2 )

[node name="WaterColor" type="Sprite" parent="."]
material = SubResource( 15 )
position = Vector2( 638, 669 )
scale = Vector2( 22.3906, 21.8614 )
texture = ExtResource( 8 )

[node name="SlimeColor" type="Sprite" parent="."]
material = SubResource( 17 )
position = Vector2( 649, 617 )
scale = Vector2( 22.3906, 21.8614 )
texture = ExtResource( 8 )

[node name="HoneyColor" type="Sprite" parent="."]
material = SubResource( 19 )
position = Vector2( 632, 634 )
scale = Vector2( 22.3906, 21.8614 )
texture = ExtResource( 8 )

[connection signal="mouse_entered" from="CanvasLayer/HomeButton/Area2D" to="CanvasLayer/HomeButton/Area2D" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/HomeButton/Area2D" to="CanvasLayer/HomeButton/Area2D" method="_on_Area2D_mouse_exited"]
